src/gen/AngularParser.java
// Generated from C:/Users/Abdulkader/Desktop/Angular-compiler-app/Angular-compiler-app/antlr/AngularParser.g4 by ANTLR 4.13.2

package gen;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class AngularParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		AT_COMPONENT=1, STANDALONE=2, IMPORTS=3, IMPORT=4, STYLES=5, TEMPLATE=6, 
		TEMPLATE_URL=7, TRUE=8, FALSE=9, FROM=10, AS=11, CLASS=12, EXPORT=13, 
		SELECTOR=14, STYLES_URL=15, PROVIDERS=16, IMPLEMENTS=17, OF=18, LBRACE=19, 
		RBRACE=20, LPARENTHESIS=21, RPARENTHESIS=22, LBRACKET=23, RBRACKET=24, 
		COLON=25, COMMA=26, STRING=27, BACKTICK=28, SEMICOLON=29, QUESTION=30, 
		ARROW=31, STATE=32, AT_INJECTABLE=33, PROVIDED_IN=34, INTERFACE=35, OBSERVABLE=36, 
		SUBJECT=37, ASYNC=38, PIPE=39, MAP=40, CREATE_ACTION=41, CREATE_REDUCER=42, 
		ON=43, EQUAL_SIGN=44, NUMBER=45, STRINGDL=46, BOOLEAN=47, ANY=48, VOID=49, 
		NULL=50, LET=51, IF=52, FOR=53, CONSTRUCTOR=54, CONST=55, RETURN=56, SWITCH=57, 
		CASE=58, DEFAULT=59, BREAK=60, EVENT=61, NEW=62, PUBLIC=63, PRIVATE=64, 
		PROTECTED=65, READONLY=66, THIS=67, DOT=68, ELLIPSIS=69, PLUS=70, MINUS=71, 
		STAR=72, SLASH=73, AND_OP=74, OR_OP=75, NOT_OP=76, EQEQ=77, EQEQEQ=78, 
		NEQ=79, NEQEQ=80, LTE=81, GTE=82, PLUS_EQUAL=83, MINUS_EQUAL=84, STAR_EQUAL=85, 
		SLASH_EQUAL=86, PERCENT=87, TILDE=88, UNDEFINED=89, VAR=90, ANGULAR_EVENT=91, 
		ANGULAR_PROPERTY=92, ANGULAR_TWO_WAY=93, ANGULAR_BINDING=94, TAG_OPEN=95, 
		TAG_CLOSE=96, TAG_OPEN_SELF=97, INPUT=98, IMG=99, NG_IF=100, NG_FOR=101, 
		ATTRIBUTE=102, ANGULAR_ATTRIBUTE_PROPERTY=103, ANGULAR_ATTRIBUTE_EVENT=104, 
		ANGULAR_ATTRIBUTE_TWO_WAY=105, DISPLAY=106, MARGIN=107, FONT_FAMILY=108, 
		PADDING=109, WIDTH=110, BORDER_RIGHT=111, OVERFLOW_Y=112, BORDER=113, 
		CURSOR=114, TRANSITION=115, HEIGHT=116, MARGIN_RIGHT=117, BORDER_SOLID=118, 
		COLOR=119, BACKGROUND=120, BACKGROUND_COLOR=121, BORDER_RADIUS=122, GAP=123, 
		BORDER_BOTTOM_COLOR=124, MARGIN_BOTTOM=125, TOP=126, LEFT=127, POSITION=128, 
		JUSTIFY_CONTENT=129, ALIGN_ITEMS=130, MAX_WIDTH=131, BOX_SIZING=132, MAGIN_TOP=133, 
		OBJECT_FIT=134, Z_INDEX=135, TEXT_DECORATION=136, FONT_WEIGHT=137, RESIZE=138, 
		TSXT_ALIGN=139, FONT_SIZE=140, GRID_TEMPLATE_COLUMNS=141, BOX_SHADOW=142, 
		FLEX_DIRECTION=143, OVERFLOW=144, NUMERIC_VALUE=145, COLOR_VALUE=146, 
		CSS_SELECTOR=147, ID=148, WS=149, COMMENT=150, SPACE=151;
	public static final int
		RULE_angularApp = 0, RULE_angularFile = 1, RULE_routeFile = 2, RULE_routeObject = 3, 
		RULE_routeProperty = 4, RULE_stateFile = 5, RULE_stateServiceClass = 6, 
		RULE_injectableDecorator = 7, RULE_injectableOptions = 8, RULE_stateInterface = 9, 
		RULE_stateInterfaceProperty = 10, RULE_stateVariable = 11, RULE_stateAction = 12, 
		RULE_stateReducer = 13, RULE_reducerOnList = 14, RULE_componentFile = 15, 
		RULE_providersOption = 16, RULE_providerList = 17, RULE_providerExpression = 18, 
		RULE_cssOption = 19, RULE_htmlOption = 20, RULE_importStatement = 21, 
		RULE_importClause = 22, RULE_defaultImport = 23, RULE_namespaceImport = 24, 
		RULE_namedImports = 25, RULE_importSpecList = 26, RULE_importSpecifier = 27, 
		RULE_componentList = 28, RULE_ts = 29, RULE_tsStatement = 30, RULE_tsAttribute = 31, 
		RULE_stateDecl = 32, RULE_stateProperty = 33, RULE_stateValue = 34, RULE_arrayValue = 35, 
		RULE_objectValue = 36, RULE_constructor = 37, RULE_constructorParams = 38, 
		RULE_constructorParam = 39, RULE_method = 40, RULE_methodParams = 41, 
		RULE_methodParam = 42, RULE_paramType = 43, RULE_tsType = 44, RULE_genericOrBasicType = 45, 
		RULE_genericType = 46, RULE_genericTypeParam = 47, RULE_arrayType = 48, 
		RULE_type = 49, RULE_tsStmt = 50, RULE_tsExpr = 51, RULE_leftHandSide = 52, 
		RULE_tsAndExpr = 53, RULE_tsEqExpr = 54, RULE_tsRelExpr = 55, RULE_tsAddExpr = 56, 
		RULE_tsMulExpr = 57, RULE_tsUnaryExpr = 58, RULE_tsPrimary = 59, RULE_tsAtom = 60, 
		RULE_tsPostfix = 61, RULE_genericTypeArguments = 62, RULE_spreadOrExpr = 63, 
		RULE_arrowFunction = 64, RULE_keyValuePair = 65, RULE_primitiveDataType = 66, 
		RULE_html = 67, RULE_element = 68, RULE_node = 69, RULE_interpolation = 70, 
		RULE_textNode = 71, RULE_htmlAttribute = 72, RULE_ngForDirective = 73, 
		RULE_ngIfDirective = 74, RULE_css = 75, RULE_cssDeclaration = 76, RULE_cssProperty = 77, 
		RULE_property = 78, RULE_cssValue = 79, RULE_cssToken = 80;
	private static String[] makeRuleNames() {
		return new String[] {
			"angularApp", "angularFile", "routeFile", "routeObject", "routeProperty", 
			"stateFile", "stateServiceClass", "injectableDecorator", "injectableOptions", 
			"stateInterface", "stateInterfaceProperty", "stateVariable", "stateAction", 
			"stateReducer", "reducerOnList", "componentFile", "providersOption", 
			"providerList", "providerExpression", "cssOption", "htmlOption", "importStatement", 
			"importClause", "defaultImport", "namespaceImport", "namedImports", "importSpecList", 
			"importSpecifier", "componentList", "ts", "tsStatement", "tsAttribute", 
			"stateDecl", "stateProperty", "stateValue", "arrayValue", "objectValue", 
			"constructor", "constructorParams", "constructorParam", "method", "methodParams", 
			"methodParam", "paramType", "tsType", "genericOrBasicType", "genericType", 
			"genericTypeParam", "arrayType", "type", "tsStmt", "tsExpr", "leftHandSide", 
			"tsAndExpr", "tsEqExpr", "tsRelExpr", "tsAddExpr", "tsMulExpr", "tsUnaryExpr", 
			"tsPrimary", "tsAtom", "tsPostfix", "genericTypeArguments", "spreadOrExpr", 
			"arrowFunction", "keyValuePair", "primitiveDataType", "html", "element", 
			"node", "interpolation", "textNode", "htmlAttribute", "ngForDirective", 
			"ngIfDirective", "css", "cssDeclaration", "cssProperty", "property", 
			"cssValue", "cssToken"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'@Component'", "'standalone'", "'imports'", "'import'", "'styles'", 
			"'template'", "'templateUrl'", "'true'", "'false'", "'from'", "'as'", 
			"'class'", "'export'", "'selector'", "'styleUrl'", "'providers'", "'implements'", 
			"'of'", "'{'", "'}'", "'('", "')'", "'['", "']'", "':'", "','", null, 
			"'`'", "';'", "'?'", "'=>'", "'ast.state'", "'@Injectable'", "'providedIn'", 
			"'interface'", "'Observable'", "'Subject'", "'async'", "'|'", "'map'", 
			"'createAction'", "'createReducer'", "'on'", "'='", "'number'", "'string'", 
			"'boolean'", "'any'", "'void'", "'null'", "'let'", "'if'", "'for'", "'constructor'", 
			"'const'", "'return'", "'switch'", "'case'", "'default'", "'break'", 
			"'Event'", "'new'", "'public'", "'private'", "'protected'", "'readonly'", 
			"'this'", "'.'", "'...'", "'+'", "'-'", "'*'", "'/'", "'&&'", "'||'", 
			"'!'", "'=='", "'==='", "'!='", "'!=='", "'<='", "'>='", "'+='", "'-='", 
			"'*='", "'/='", "'%'", "'~'", "'undefined'", "'var'", null, null, null, 
			null, "'<'", "'>'", "'</'", "'input'", "'img'", "'*ngIf'", "'*ngFor'", 
			null, null, null, null, "'display'", "'margin'", "'font-family'", "'padding'", 
			"'width'", "'border-right'", "'overflow-y'", "'border'", "'cursor'", 
			"'transition'", "'height'", "'margin-right'", "'border-solid'", "'color'", 
			"'background'", "'background-color'", "'border-radius'", "'gap'", "'border-bottom-color'", 
			"'margin-bottom'", "'top'", "'left'", "'position'", "'justify-content'", 
			"'align-items'", "'max-width'", "'box-sizing'", "'margin-top'", "'object-fit'", 
			"'z-index'", "'text-decoration'", "'font-weight'", "'resize'", "'text-align'", 
			"'font-size'", "'grid-template-columns'", "'box-shadow'", "'flex-direction'", 
			"'overflow'", null, null, null, null, null, null, "' '"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "AT_COMPONENT", "STANDALONE", "IMPORTS", "IMPORT", "STYLES", "TEMPLATE", 
			"TEMPLATE_URL", "TRUE", "FALSE", "FROM", "AS", "CLASS", "EXPORT", "SELECTOR", 
			"STYLES_URL", "PROVIDERS", "IMPLEMENTS", "OF", "LBRACE", "RBRACE", "LPARENTHESIS", 
			"RPARENTHESIS", "LBRACKET", "RBRACKET", "COLON", "COMMA", "STRING", "BACKTICK", 
			"SEMICOLON", "QUESTION", "ARROW", "STATE", "AT_INJECTABLE", "PROVIDED_IN", 
			"INTERFACE", "OBSERVABLE", "SUBJECT", "ASYNC", "PIPE", "MAP", "CREATE_ACTION", 
			"CREATE_REDUCER", "ON", "EQUAL_SIGN", "NUMBER", "STRINGDL", "BOOLEAN", 
			"ANY", "VOID", "NULL", "LET", "IF", "FOR", "CONSTRUCTOR", "CONST", "RETURN", 
			"SWITCH", "CASE", "DEFAULT", "BREAK", "EVENT", "NEW", "PUBLIC", "PRIVATE", 
			"PROTECTED", "READONLY", "THIS", "DOT", "ELLIPSIS", "PLUS", "MINUS", 
			"STAR", "SLASH", "AND_OP", "OR_OP", "NOT_OP", "EQEQ", "EQEQEQ", "NEQ", 
			"NEQEQ", "LTE", "GTE", "PLUS_EQUAL", "MINUS_EQUAL", "STAR_EQUAL", "SLASH_EQUAL", 
			"PERCENT", "TILDE", "UNDEFINED", "VAR", "ANGULAR_EVENT", "ANGULAR_PROPERTY", 
			"ANGULAR_TWO_WAY", "ANGULAR_BINDING", "TAG_OPEN", "TAG_CLOSE", "TAG_OPEN_SELF", 
			"INPUT", "IMG", "NG_IF", "NG_FOR", "ATTRIBUTE", "ANGULAR_ATTRIBUTE_PROPERTY", 
			"ANGULAR_ATTRIBUTE_EVENT", "ANGULAR_ATTRIBUTE_TWO_WAY", "DISPLAY", "MARGIN", 
			"FONT_FAMILY", "PADDING", "WIDTH", "BORDER_RIGHT", "OVERFLOW_Y", "BORDER", 
			"CURSOR", "TRANSITION", "HEIGHT", "MARGIN_RIGHT", "BORDER_SOLID", "COLOR", 
			"BACKGROUND", "BACKGROUND_COLOR", "BORDER_RADIUS", "GAP", "BORDER_BOTTOM_COLOR", 
			"MARGIN_BOTTOM", "TOP", "LEFT", "POSITION", "JUSTIFY_CONTENT", "ALIGN_ITEMS", 
			"MAX_WIDTH", "BOX_SIZING", "MAGIN_TOP", "OBJECT_FIT", "Z_INDEX", "TEXT_DECORATION", 
			"FONT_WEIGHT", "RESIZE", "TSXT_ALIGN", "FONT_SIZE", "GRID_TEMPLATE_COLUMNS", 
			"BOX_SHADOW", "FLEX_DIRECTION", "OVERFLOW", "NUMERIC_VALUE", "COLOR_VALUE", 
			"CSS_SELECTOR", "ID", "WS", "COMMENT", "SPACE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "AngularParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AngularParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AngularAppContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(AngularParser.EOF, 0); }
		public List<AngularFileContext> angularFile() {
			return getRuleContexts(AngularFileContext.class);
		}
		public AngularFileContext angularFile(int i) {
			return getRuleContext(AngularFileContext.class,i);
		}
		public AngularAppContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_angularApp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterAngularApp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitAngularApp(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitAngularApp(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AngularAppContext angularApp() throws RecognitionException {
		AngularAppContext _localctx = new AngularAppContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_angularApp);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(163); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(162);
				angularFile();
				}
				}
				setState(165); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 36028839968645138L) != 0) );
			setState(167);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AngularFileContext extends ParserRuleContext {
		public ComponentFileContext componentFile() {
			return getRuleContext(ComponentFileContext.class,0);
		}
		public StateFileContext stateFile() {
			return getRuleContext(StateFileContext.class,0);
		}
		public RouteFileContext routeFile() {
			return getRuleContext(RouteFileContext.class,0);
		}
		public AngularFileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_angularFile; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterAngularFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitAngularFile(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitAngularFile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AngularFileContext angularFile() throws RecognitionException {
		AngularFileContext _localctx = new AngularFileContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_angularFile);
		try {
			setState(172);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(169);
				componentFile();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(170);
				stateFile();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(171);
				routeFile();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
